Resolves fdo#87863: Calc tooltip text for hyperlink wrong on OSX

I copied pasted the Writer way, with "follow" and "link" instead of "open" and "hyperlink"
There are still the management of ":" + space (which could be different according to i10n)

Change-Id: Ic8516c667b1882030d527add228a98e1081f608f
Reviewed-on: https://gerrit.libreoffice.org/13712
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>